k3s/traefik-middleware.yaml
# traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-ports-server
  namespace: default 
spec:
  stripPrefix:
    prefixes:
      - /ports_server
