k3s/ports-backend-service.yaml
# ports-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ports-backend-service
spec:
  selector:
    app: ports-backend
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
