k3s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magicports-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-ports-server@kubernetescrd
spec:
  rules:
  - host: magicports.veeambp.com
    http:
      paths:
      # Path for FastAPI backend
      - path: /ports_server 
        pathType: Prefix 
        backend:
          service:
            name: ports-backend-service
            port:
              number: 8001
      # Path for Angular frontend (catch-all)
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: ports-frontend-service
            port:
              number: 80
  tls:
  - hosts:
    - magicports.veeambp.com
    secretName: magicports-tls-secret
